--- a/css/style.css
+++ b/css/style.css
@@ -8149,10 +8149,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #24A148; }
+  color: #8b5d3b; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #24A148;
+    color: #8b5d3b;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8179,8 +8179,8 @@ h1, h2, h3, h4, h5,
       background: #000000 !important;
       position: relative;
       top: 0; } }
-  .ftco-navbar-light .navbar-brand {
-    color: #fff; }
+  .ftco-navbar-light .navbar-brand img{
+    width: 100px; }
     .ftco-navbar-light .navbar-brand span {
       color: #e16262; }
     @media (max-width: 991.98px) {
@@ -8199,7 +8199,7 @@ h1, h2, h3, h4, h5,
     font-weight: 600;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #24A148; }
+      color: #0b3a5f; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
@@ -8254,7 +8254,7 @@ h1, h2, h3, h4, h5,
     border: 1px solid #e16262;
     background: #e16262 !important; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #24A148; }
+    color: #0b3a5f; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
       color: #24A148; } }
@@ -8276,7 +8276,7 @@ h1, h2, h3, h4, h5,
     left: 0;
     top: 0;
     margin-top: -130px;
-    background: #fff !important;
+    background: #ffffffd9!important;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
     @media (max-width: 991.98px) {
@@ -8285,7 +8285,7 @@ h1, h2, h3, h4, h5,
         padding-right: 0 !important;
         padding-bottom: 0 !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #24A148 !important; }
+      color: #8b5d3b!important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
       background: #24A148;
@@ -8433,11 +8433,11 @@ h1, h2, h3, h4, h5,
 
 @media (min-width: 992px) {
   .search-bg {
-    background: #24A148; } }
+    background: #8b5d3b; } }
 
 .search-wrap-1 {
   position: relative;
-  background: #21243d;
+  background: #0b3a5f;
   -webkit-box-shadow: 0px 75px 94px -66px rgba(0, 0, 0, 0.66);
   -moz-box-shadow: 0px 75px 94px -66px rgba(0, 0, 0, 0.66);
   box-shadow: 0px 75px 94px -66px rgba(0, 0, 0, 0.66);
@@ -8471,8 +8471,8 @@ h1, h2, h3, h4, h5,
     height: inherit !important;
     font-size: 18px;
     border: none !important;
-    color: rgba(255, 255, 255, 0.4) !important;
-    background-color: #21243d !important;
+    color:#ffffff9c !important;
+    background-color: #0b3a5f!important;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     -ms-border-radius: 0;
@@ -8490,7 +8490,7 @@ h1, h2, h3, h4, h5,
     .search-property-1 .form-group .form-control.btn {
       padding: 22px 10px !important;
       font-size: 16px;
-      background: #24A148 !important;
+      background: #8b5d3b!important;
       border: none !important;
       color: #fff !important;
       border-radius: 4px; }
@@ -8672,7 +8672,7 @@ h1, h2, h3, h4, h5,
   background: #f8f9fa !important; }
 
 .bg-primary {
-  background: #24A148 !important; }
+  background: #8b5d3b !important; }
 
 .bg-darken {
   background: #0f101c; }
@@ -8689,8 +8689,8 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #24A148 !important;
-    border: 1px solid #24A148 !important;
+    background:#8b5d3b!important;
+    border: 1px solid #8b5d3b!important;
     color: #fff !important; }
     .btn.btn-primary:hover {
       border: 1px solid #24A148;
@@ -8763,7 +8763,7 @@ h1, h2, h3, h4, h5,
         font-size: 14px;
         padding: 4px 10px; }
       .property-wrap .img .rent-sale .rent {
-        background: #24A148;
+        background: #8b5d3b;
         color: #fff;
         border-radius: 4px;
         font-size: 14px;
@@ -8780,7 +8780,7 @@ h1, h2, h3, h4, h5,
         border-radius: 4px;
         padding: 4px 8px; }
       .property-wrap .img p.price span.orig-price {
-        color: #24A148; }
+        color: #8b5d3b; }
       .property-wrap .img p.price span.old-price {
         color: rgba(0, 0, 0, 0.4);
         position: relative;
@@ -8839,7 +8839,7 @@ h1, h2, h3, h4, h5,
       right: 0;
       width: 40px;
       height: 40px;
-      background: #24A148;
+      background: #8b5d3b;
       border-radius: 50% 0 50% 0;
       -moz-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
@@ -8852,7 +8852,7 @@ h1, h2, h3, h4, h5,
         -ms-transform: rotate(90deg);
         transform: rotate(90deg); }
       .property-wrap .text .btn-custom:hover {
-        background: #e16262; }
+        background: #0b3a5f; }
   .property-wrap:hover {
     -webkit-box-shadow: 0px 5px 39px -14px rgba(0, 0, 0, 0.26);
     -moz-box-shadow: 0px 5px 39px -14px rgba(0, 0, 0, 0.26);
@@ -8954,7 +8954,7 @@ h1, h2, h3, h4, h5,
   .search-place:hover:after {
     opacity: .3; }
   .search-place:hover .desc h3 span {
-    background: #24A148;
+    background: #8b5d3b;
     color: #fff; }
 
 .nav-pills {
@@ -9106,14 +9106,14 @@ h1, h2, h3, h4, h5,
     .services .media-body p {
       margin-bottom: 0; }
   .services.services-bg {
-    background: #24A148; }
+    background: #8b5d3b; }
     .services.services-bg.services-darken {
-      background: #219442; }
+      background: #8b5d3b; }
       @media (max-width: 991.98px) {
         .services.services-bg.services-darken {
           background: transparent; } }
     .services.services-bg.services-lighten {
-      background: #229944; }
+      background: #8b5d3b; }
       @media (max-width: 991.98px) {
         .services.services-bg.services-lighten {
           background: transparent; } }
@@ -9146,7 +9146,11 @@ h1, h2, h3, h4, h5,
     border-radius: 0%; }
     .services.services-2 .icon span {
       color: #fff;
-      font-size: 30px; }
+      font-size: 30px;
+      padding: 20px;
+      border-radius: 45px 5px 45px 5px;
+      border: 2px solid #8b5d3b; 
+      background-color:#8b5d3b;;}
   .services.services-2 img {
     position: absolute;
     top: 0;
@@ -9405,7 +9409,7 @@ textarea.form-control {
   font-size: 18px;
   display: inline-block;
   margin-bottom: 0;
-  color: #24A148;
+  color:#8b5d3b;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -9422,7 +9426,7 @@ textarea.form-control {
     width: 50px;
     height: 1px;
     margin-top: -1px;
-    background: #24A148; }
+    background:#8b5d3b; }
   .heading-section .subheading:before {
     position: absolute;
     top: 50%;
@@ -9434,7 +9438,7 @@ textarea.form-control {
     width: 50px;
     height: 1px;
     margin-top: -1px;
-    background: #24A148; }
+    background:#8b5d3b; }
 
 .heading-section h2 {
   font-size: 40px;
@@ -9522,7 +9526,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.1); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #24A148; }
+        background: #8b5d3b; }
 
 .testimony-wrap {
   display: block;
@@ -9542,7 +9546,7 @@ textarea.form-control {
     -ms-border-radius: 50%;
     border-radius: 50%; }
   .testimony-wrap .fa {
-    color: #24A148;
+    color: #8b5d3b;
     font-size: 30px;
     position: absolute;
     top: -15px;
@@ -9621,7 +9625,7 @@ textarea.form-control {
         padding: 2px 8px;
         border-radius: 4px; }
   .agent:hover h3 a, .agent:focus h3 a {
-    background: #24A148;
+    background: #8b5d3b;
     color: #fff; }
   .agent:hover img, .agent:focus img {
     -webkit-transform: scale(1.1);
@@ -9692,7 +9696,7 @@ textarea.form-control {
 .ftco-counter .text strong.number {
   font-weight: 600;
   font-size: 50px;
-  color: #24A148; }
+  color: #8b5d3b; }
 
 .ftco-counter .text span {
   display: block;
