--- a/css/style.css
+++ b/css/style.css
@@ -3455,8 +3455,8 @@ input[type="button"].btn-block {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  /* padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem; */
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
@@ -8257,7 +8257,7 @@ h1, h2, h3, h4, h5,
     color: #0b3a5f; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #24A148; } }
+      color: #0b3a5f; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8360,7 +8360,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     content: '';
     opacity: .5;
-    background: #21243d;
+    background:#0b3a5f9e;
     height: 850px; }
   .hero-wrap.hero-wrap-2 {
     height: 500px !important;
@@ -8424,9 +8424,9 @@ h1, h2, h3, h4, h5,
       .slider-text .breadcrumbs span a {
         color: rgba(255, 255, 255, 0.7); }
         .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-          color: #24A148; }
+          color: #0b3a5f; }
           .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-            color: #24A148; }
+            color: #0b3a5f; }
   .slider-text .bread {
     font-weight: 400 !important;
     position: relative; }
@@ -9095,7 +9095,7 @@ h1, h2, h3, h4, h5,
     width: 100px; }
     .services .icon span {
       font-size: 60px;
-      color: #24A148; }
+      color:#8b5d3b; }
   .services .media-body {
     width: 100%;
     color: rgba(0, 0, 0, 0.8); }
@@ -9786,7 +9786,7 @@ textarea.form-control {
     margin-bottom: 4px;
     font-weight: 400; }
     .block-27 ul li a, .block-27 ul li span {
-      color: #24A148;
+      color: #0b3a5f;
       text-align: center;
       display: inline-block;
       width: 40px;
@@ -9794,13 +9794,16 @@ textarea.form-control {
       line-height: 40px;
       border-radius: 50%;
       border: 1px solid #e6e6e6; }
+      .block-27 ul li a:hover{
+      color:#0b3a5f!important ;
+      background-color: #8b5d3b!important;}
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #24A148;
+      background: #0b3a5f;
       color: #fff;
       border: 1px solid transparent; }
 
 .contact-section .contact-info p a {
-  color: #1a1a1a; }
+  color: #0b3a5f; }
 
 .contact-section .contact-info p span {
   display: block;
@@ -9828,7 +9831,8 @@ textarea.form-control {
   outline: none !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
-  font-size: 15px; }
+  font-size: 15px;
+  border: 1px solid #b3b3b3; }
 
 .block-21 .blog-img {
   display: block;
