--- a/css/style.css
+++ b/css/style.css
@@ -8278,7 +8278,9 @@ h1, h2, h3, h4, h5,
     margin-top: -130px;
     background: #ffffffd9!important;
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); }
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1); 
+    padding-top: 3px !important;
+    padding-bottom: 3px !important;}
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .nav-item > .nav-link {
         padding-left: 0 !important;
@@ -8329,11 +8331,11 @@ h1, h2, h3, h4, h5,
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
       -o-transition: .3s all ease-out;
-      transition: .3s all ease-out; }
+      transition: .3s all ease-out;}
     .ftco-navbar-light.scrolled.sleep {
       -webkit-transition: .3s all ease-out;
       -o-transition: .3s all ease-out;
-      transition: .3s all ease-out; }
+      transition: .3s all ease-out;}
     .ftco-navbar-light.scrolled .navbar-brand {
       color: #000000; }
 
